# A-Maze-ing

./: .gitignore  Makefile  a_maze_ing-0.1.0-py3-none-any.whl  config.txt  output.txt  output_maze.txt  output_validator.py  pyproject.toml  tes.txt  test.py
A-Maze-ing/: __init__.py  a_maze_ing.py  config.txt  test.py
A-Maze-ing/algorithm/: __init__.py  algo.py  states.py
A_Maze_ing/: __init__.py  a_maze_ing.py  animate.py  maze.py
A_Maze_ing/algorithm/: __init__.py  algo_dfs.py  algo_kruskal.py  algo_nicki.py  base.py  states.py
truly amazing/: Makefile  README.md  pyproject.toml
truly amazing/A_Maze_ing/: a_maze_ing.py  animate.py  maze.py
truly amazing/A_Maze_ing/algorithm/: algo_nicki.py  base.py
