[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "A-maze-ing"
version = "0.2.0"
description = "Perfect and imperfect terminal maze generators"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[project.optional-dependencies]
dev = [
    "flake8>=7.0",
]
